--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -3,6 +3,7 @@
   <h3 class="text-center">Selecione um contrato para avaliar as condições de negociação:</h3>
 </header>
 
+
 <accordion [isAnimated]="true" [closeOthers]="true">
   
   <accordion-group *ngIf="dadosDivida.length">
@@ -11,12 +12,12 @@
       <div class="pull-left float-left produto-heading">Claro Móvel 
         <span class="movelLabel" *ngIf="movelLabel">Débitos para serem negociados:</span>
         <span class="movelLabel" *ngIf="opcoesParcelamentoLabel">Opções de parcelamento:</span>
-      </div>  
+      </div>        
     </button>  
           
     <div class="row opcoes-parcelamento" *ngIf="opcoesParcelamento">
         <div class="col-6" *ngFor="let opc of opcoesPg[this.dadosDivida[this.ind_parcelado].CodigoTitulo].OpcaoPagamento; let ind = index" [hidden]="!ind">
-          <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao()">
+          <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarParcelado(ind)">
               R$ {{ getOpcao(ind) }}
           </button>
         </div>
@@ -28,25 +29,32 @@
       </div>   
   
     <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()"></app-prazo-finalizacao>
-      
-    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao">
+
+    <div class="loader-wrap" *ngIf="loaderClaroMovel">
+      <div class="loader"></div>
+    </div>  
+
+    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loaderClaroMovel"> 
       <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of dadosDivida; let ind = index">
         <div class="metodo-de-pagamento">
           Valor total: R$ {{ dadosDivida[ind].Parcelas.ParcelaDivida.Valor }}
         </div>
         <div class="row">  
           <div class="col-6 pr-0"> <!--  col-sm-3 -->
-            <button type="button" class="btn btn-primary"> 
+            <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarAVista(ind, getValorNegociar(dadosDivida[ind].CodigoTitulo))"> 
               À vista:<br> R$ {{ getValorNegociar(dadosDivida[ind].CodigoTitulo) }} 
             </button>
           </div>
           <div class="col-6">
-            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="nao_parcelado[dadosDivida[ind].CodigoTitulo]"> 
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[dadosDivida[ind].CodigoTitulo]"> 
+                Aguarde...
+            </button>            
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 2"> 
               Parcelado
-            </button> 
-            <button type="button" class="btn btn-primary font-15px" *ngIf="!nao_parcelado[dadosDivida[ind].CodigoTitulo]" disabled>
-              Sem opção de parcelamento  
             </button>
+            <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 1" disabled> 
+              Sem opção de parcelamento
+            </button> 
           </div>
         </div>    
       </div>
