--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -5,7 +5,7 @@
   <p *ngIf="vezesParcelado()">Demais parcelas: {{ vezesParcelado() }} x R$ {{ outrasParcelado() }}</p>
   <div class="row">
     <div class="col-sm-4">
-      <button type="button" class="btn btn-yellow">
+      <button type="button" class="btn btn-yellow" (click)="gravaAcordo()">
         Confirmar acordo
       </button>
     </div>
