--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -1,26 +1,20 @@
 <img src="assets/img/logo.png" alt="Claro" class="logo">
 <h3 class="text-center">Selecione o produto que deseja o reenvio de boleto:</h3>
 
-    <accordion [isAnimated]="true">
-        <accordion-group>
-          <button class="btn btn-link btn-block clearfix" accordion-heading>
-            <img src="assets/icons/phone.jpg" class="produto-img" alt="...">
-            <div class="pull-left float-left produto-heading">Claro Móvel</div>
-          </button>
-                    
-      
-        </accordion-group>
-        <accordion-group>
-          <button class="btn btn-link" accordion-heading>
-            <img src="assets/icons/internet.jpg" class="produto-img" alt="...">
-            <div class="pull-left float-left produto-heading">Claro Internet</div>
-          </button>
-        </accordion-group>
-        <accordion-group>
-            <button class="btn btn-link btn-block clearfix" accordion-heading>
-              <img src="assets/icons/tv.jpg" class="produto-img" alt="...">
-              <div class="pull-left float-left produto-heading">Claro TV</div>
-            </button>
-          </accordion-group>
-      </accordion>
-      
+<div class="row">
+  <div class="col-sm-4">
+    <button type="button" class="btn btn-yellow" (click)="gravaAcordo()">
+      Confirmar acordo
+    </button>
+  </div>
+  <div class="col-6 col-sm-4">
+    <button type="button" class="btn btn-primary" (click)="mudarData()">
+      Mudar data
+    </button>
+  </div>
+  <div class="col-6 col-sm-4">
+    <button type="button" class="btn btn-primary" (click)="voltar()">
+      Mudar parcelamento
+    </button>
+  </div>            
+</div>
