--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -16,7 +16,7 @@
                 <h3 class="text-center" *ngIf="!fizPagamentoOk">Bem-vindo, <span class="text-capitalize">{{nome}}</span>!</h3>    
                 
                 <div class="row">                    
-                    <a class="card col-lg-2" (click)="negocieOnline()">
+                    <a class="card col-lg-2" (click)="negocieOnline()" *ngIf="this.apiRestService.dividas.Divida">
                             <img src="assets/icons/negocie_online.png" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">NEGOCIE ONLINE</h5>
@@ -65,7 +65,7 @@
                     <p class="btn btn-acessar">Informar</p>
                 </div>
     
-            <a class="card col-lg-2" (click)="acordosAndamento()">
+            <a class="card col-lg-2" (click)="acordosAndamento()" *ngIf="this.apiRestService.dividas.Acordo">
                     <img src="assets/icons/acordos.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">SEUS ACORDOS EM ANDAMENTO</h5>
