--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.css
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.css
@@ -31,7 +31,10 @@
     }
 
     .detalhes-titulo {
-        margin-bottom: 0;
-        
-    }    
+        margin-bottom: 0;        
+    }
+    
+    .btn-mudar-parce {
+        font-size: 15px;
+    }
 }    
