--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -1,20 +1,77 @@
-<img src="assets/img/logo.png" alt="Claro" class="logo">
-<h3 class="text-center">Selecione o produto que deseja o reenvio de boleto:</h3>
+<header *ngIf="showHeader">
+        <img src="assets/img/logo.png" alt="Claro" class="logo">
+</header>      
 
-<div class="row">
-  <div class="col-sm-4">
-    <button type="button" class="btn btn-yellow" (click)="gravaAcordo()">
-      Confirmar acordo
-    </button>
-  </div>
-  <div class="col-6 col-sm-4">
-    <button type="button" class="btn btn-primary" (click)="mudarData()">
-      Mudar data
-    </button>
-  </div>
-  <div class="col-6 col-sm-4">
-    <button type="button" class="btn btn-primary" (click)="voltar()">
-      Mudar parcelamento
-    </button>
-  </div>            
-</div>
+<accordion [isAnimated]="true" [closeOthers]="true">
+   
+    <accordion-group *ngFor="let acordo of acordos">
+        <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading (click)="showHeader = false">
+         <div class="row">
+          <div class="col-2">
+            <img [src]="getIcon(acordo)" class="produto-img">  
+            {{ acordo.NumeroTitulo.split(' ')[1] }}
+          </div>  
+            <div class="col-3">  
+                Data: {{ acordo.DataAcordo }}
+            </div>              
+          <div class="col-4">
+              Status: {{ acordo.StatusAcordo }}
+          </div>
+          <div class="col-3">
+              Filial: {{ acordo.FilialAcordo }}
+          </div>
+        </div>
+        </button>     
+        <div class="acc-body">
+         <p class="font-weight-bold">Parcelas</p>
+          <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.length">
+            <div *ngFor="let par of acordo.ParcelasAcordo.ParcelaAcordo" class="row mb-15">
+                    <div class="col-2">
+                        Data: {{ par.DataVencimento }}
+                    </div>
+                    <div class="col-3">
+                        Status: {{ par.StatusParcelaAcordo }}
+                    </div>
+                    <div class="col-2">
+                        Valor: {{ par.ValorParcela }}
+                    </div>
+                    <div class="col-3">
+                        <button type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo)">
+                            Segunda via do boleto        
+                        </button>
+                    </div>
+                    <div *ngIf="boleto">
+                        <p> {{ boleto.LinhaDigitavel }}</p>
+                        {{ boleto.DataVencimento }}
+                        <p class="float-right">
+                            {{ boleto.Valor }}
+                        </p>
+                    </div>
+            </div>
+         </div>
+         <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo" class="row">
+                    <div class="col-2">
+                        Data: {{ acordo.ParcelasAcordo.ParcelaAcordo.DataVencimento }}
+                        </div>
+                        <div class="col-3">
+                            Status: {{ acordo.ParcelasAcordo.ParcelaAcordo.StatusParcelaAcordo }}
+                        </div>
+                        <div class="col-2">
+                            Valor: {{ acordo.ParcelasAcordo.ParcelaAcordo.ValorParcela }}
+                        </div>
+                        <div class="col-3">
+                            <button type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo)">
+                                Segunda via do boleto        
+                            </button>
+                        </div>
+                        <div *ngIf="boleto">
+                            <p> {{ boleto.LinhaDigitavel }}</p>
+                            {{ boleto.DataVencimento }}
+                            <p class="float-right">
+                                {{ boleto.Valor }}
+                            </p>
+                        </div>
+         </div>
+        </div>    
+    </accordion-group>
+</accordion>
