--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="fim">
   <p class="detalhes-titulo">Detalhes do acordo:</p>
-  <p>Data do primeiro pagamento: {{ dataPagamento.toLocaleString().split(',')[0] }}</p>
-  <p>Valor da {{ primeiraParcelado()? 'primeira':'' }} parcela: R$ {{ primeiraParcelado()? primeiraParcelado():valorAVista() }}</p>
+  <p>Data do {{ primeiraParcelado()? 'primeiro':'' }} pagamento: {{ dataPagamento.toLocaleString().split(',')[0] }}</p>
+  <p>Valor {{ primeiraParcelado()? 'da primeira parcela':'' }}: R$ {{ primeiraParcelado()? primeiraParcelado():valorAVista() }}</p>
   <p *ngIf="vezesParcelado()">Demais parcelas: {{ vezesParcelado() }} x R$ {{ outrasParcelado() }}</p>
   <div class="row">
     <div class="col-sm-4">
@@ -15,7 +15,7 @@
       </button>
     </div>
     <div class="col-6 col-sm-4">
-      <button type="button" class="btn btn-primary" (click)="voltar()">
+      <button type="button" class="btn btn-primary btn-mudar-parce" (click)="voltar()">
         Mudar parcelamento
       </button>
     </div>            
@@ -38,7 +38,7 @@
       </button>      
     </div>
     <div class="col-sm-3">      
-      <button type="button" class="btn btn-primary" (click)="voltar()">
+      <button type="button" class="btn btn-primary" (click)="voltar_data()">
         Voltar
       </button>
     </div>    
