--- a/src/styles.css
+++ b/src/styles.css
@@ -71,3 +71,34 @@ h3 {
   }
   
 }
+
+    
+.loader-wrap {
+  height: 70px;
+  width: 70px;
+  display: table;
+} 
+
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+  display: table-cell;
+    vertical-align: middle;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
