--- a/src/app/acordos-andamento/acordos-andamento.component.css
+++ b/src/app/acordos-andamento/acordos-andamento.component.css
@@ -35,4 +35,8 @@ button {
             font-size: 16px;
         }    
 
+        .produto-img {
+            height: 25px;
+        }    
+
     }    
