--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -1,11 +1,7 @@
-<header *ngIf="showHeader">
-        <img src="assets/img/logo.png" alt="Claro" class="logo">
-</header>      
-
 <accordion [isAnimated]="true" [closeOthers]="true">
    
     <accordion-group *ngFor="let acordo of acordos">
-        <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading (click)="showHeader = false">
+        <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading>
          <div class="row">
           <div class="col-2">
             <img [src]="getIcon(acordo)" class="produto-img">  
@@ -14,10 +10,10 @@
             <div class="col-3">  
                 Data: {{ acordo.DataAcordo }}
             </div>              
-          <div class="col-4">
+          <div class="col-5">
               Status: {{ acordo.StatusAcordo }}
           </div>
-          <div class="col-3">
+          <div class="col-2">
               Filial: {{ acordo.FilialAcordo }}
           </div>
         </div>
@@ -25,7 +21,7 @@
         <div class="acc-body">
          <p class="font-weight-bold">Parcelas</p>
           <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.length">
-            <div *ngFor="let par of acordo.ParcelasAcordo.ParcelaAcordo" class="row mb-15">
+            <div *ngFor="let par of acordo.ParcelasAcordo.ParcelaAcordo; let ind = index" class="row mb-15">
                     <div class="col-2">
                         Data: {{ par.DataVencimento }}
                     </div>
@@ -36,22 +32,20 @@
                         Valor: {{ par.ValorParcela }}
                     </div>
                     <div class="col-3">
-                        <button type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo)">
+                        <a type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo, ind)">
                             Segunda via do boleto        
-                        </button>
+                        </a>
+                        <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>
                     </div>
-                    <div *ngIf="boleto">
-                        <p> {{ boleto.LinhaDigitavel }}</p>
-                        {{ boleto.DataVencimento }}
-                        <p class="float-right">
-                            {{ boleto.Valor }}
-                        </p>
-                    </div>
+                    <div class="loader-wrap">
+                        <div class="loader col-1" *ngIf="loadingBoleto[ind]"></div>
+                    </div>    
+                    
             </div>
          </div>
          <div *ngIf="acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo" class="row">
                     <div class="col-2">
-                        Data: {{ acordo.ParcelasAcordo.ParcelaAcordo.DataVencimento }}
+                            Data: {{ acordo.ParcelasAcordo.ParcelaAcordo.DataVencimento }}
                         </div>
                         <div class="col-3">
                             Status: {{ acordo.ParcelasAcordo.ParcelaAcordo.StatusParcelaAcordo }}
@@ -60,18 +54,15 @@
                             Valor: {{ acordo.ParcelasAcordo.ParcelaAcordo.ValorParcela }}
                         </div>
                         <div class="col-3">
-                            <button type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, par.CodigoParcelaAcordo)">
+                            <a type="button" class="btn btn-primary" (click)="segunda_via(acordo.CodigoAcordo, acordo.ParcelasAcordo.ParcelaAcordo.CodigoParcelaAcordo, 0)">
                                 Segunda via do boleto        
-                            </button>
+                            </a>                          
+                            <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>  
                         </div>
-                        <div *ngIf="boleto">
-                            <p> {{ boleto.LinhaDigitavel }}</p>
-                            {{ boleto.DataVencimento }}
-                            <p class="float-right">
-                                {{ boleto.Valor }}
-                            </p>
-                        </div>
-         </div>
+                        <div class="loader-wrap">
+                            <div class="loader col-1" *ngIf="loadingBoleto[0]"></div>
+                        </div>    
+            </div>
         </div>    
     </accordion-group>
 </accordion>
