--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -29,10 +29,12 @@
       </div>   
   
     <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()" (clickVoltarAVista)="hideOpcoesParcelamento()"></app-prazo-finalizacao>
-    <div class="loader-wrap" *ngIf="loaderClaroMovel">
-      <div class="loader"></div>
-    </div>  
-
+    <div class="loader-wrap-wrap" *ngIf="loaderClaroMovel">  
+      <div class="loader-wrap">
+        <div class="loader"></div>
+      </div>  
+    </div>
+      
     <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loaderClaroMovel"> 
       <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of dadosDivida; let ind = index">
         <div class="metodo-de-pagamento">
