--- a/src/app/acordos-andamento/acordos-andamento.component.css
+++ b/src/app/acordos-andamento/acordos-andamento.component.css
@@ -29,8 +29,24 @@ button {
         position: relative;
         top: -15px;
     }
+
+    .bottom-parcela {
+      margin-bottom: 0px;            
+    }
     
     @media (max-width: 768px) {
+        .no-padd-left {
+            padding-left: 0;
+        }
+
+        .no-padd-right {
+            padding-right: 0;
+        }
+
+        .bottom-parcela {
+            margin-bottom: 7px;            
+          }
+        
         .btn-accordion {
             font-size: 16px;
         }    
@@ -39,4 +55,27 @@ button {
             height: 25px;
         }    
 
+        .img-produto {
+            line-height: 25px;
+        }
+
+        .btn-linha {
+            line-height: 22px;
+        }
+
+        .acc-body {
+            font-size: 15px;
+        }
+
+        .valor-mobile {
+            font-size: 14px;
+            padding-left: 0;
+        }
+
+        .loader-wrap {
+            position: relative;
+            left: 8px;
+            width: 30px;
+            height: 30px;
+        }
     }    
