--- a/src/app/boleto/boleto.component.html
+++ b/src/app/boleto/boleto.component.html
@@ -3,10 +3,125 @@
       <h4 class="modal-title pull-left">Seu boleto</h4>
   </div>
   <div class="modal-body">
-    <p> {{ linha }}</p>
-        {{ data }}
-    <p class="float-right">
-        {{ valor }}
-    </p>
+
+    <P align=center>
+      <TABLE cellSpacing=0 cellPadding=0 border=0 class=Boleto>
+        
+        <TR>
+          <TD style='width: 0.9cm'></TD>
+          <TD style='width: 1cm'></TD>
+          <TD style='width: 1.9cm'></TD>
+          
+          <TD style='width: 0.5cm'></TD>
+          <TD style='width: 1.3cm'></TD>
+          <TD style='width: 0.8cm'></TD>
+          <TD style='width: 1cm'></TD>
+          
+          <TD style='width: 1.9cm'></TD>
+          <TD style='width: 1.9cm'></TD>
+          
+          <TD style='width: 3.8cm'></TD>
+          
+          <TD style='width: 3.8cm'></TD>
+        <tr><td colspan=11>
+        <ul class=BoletoInstrucoes>
+        <li>Imprima em papel A4 ou Carta</li>
+        <li>Utilize margens mínimas a direita e a esquerda</li>
+        <li>Recorte na linha pontilhada</li>
+        <li>Não rasure o código de barras</li>
+        </ul>
+        </td></tr>
+        
+        <tr><td colspan=11 class=BoletoPontilhado>&nbsp;</td></tr>
+        <TR>
+          <TD colspan=4 class=BoletoLogo><img src='assets/img/logo.jpg' style="width: 60px; padding: 5px"></TD>
+          <TD colspan=8 class=BoletoLinhaDigitavel>{{ linha }}</TD>
+        </TR>
+        <TR>
+          <TD colspan=10 class=BoletoTituloEsquerdo>Nome do Cliente</TD>
+          <TD class=BoletoTituloDireito>Vencimento</TD>
+        </TR>
+        <TR>
+          <TD colspan=10 class=BoletoValorEsquerdo style='text-align: left; padding-left : 0.1cm; text-decoration: capitalize'>{{ cliente }}</TD>
+          <TD class=BoletoValorDireito>{{ data }}</TD>
+        </TR>  
+        <TR>
+          <TD colspan=10 class=BoletoTituloEsquerdo>Cedente</TD>
+          <TD class=BoletoTituloDireito>Agência/Código do Cedente</TD>
+        </TR>
+        <TR>
+          <TD colspan=10 class=BoletoValorEsquerdo style='text-align: left; padding-left : 0.1cm'>Cedente</TD>
+          <TD class=BoletoValorDireito>AgenciaCodDoCedente</TD>
+        </TR>   
+        <TR>
+          <TD colspan=3 class=BoletoTituloEsquerdo>Data do Documento</TD>
+          <TD colspan=4 class=BoletoTituloEsquerdo>Número do Documento</TD>
+          <TD class=BoletoTituloEsquerdo>Espécie</TD>
+          <TD class=BoletoTituloEsquerdo>Aceite</TD>
+          <TD class=BoletoTituloEsquerdo>Data do Processamento</TD>
+          <TD class=BoletoTituloDireito>Nosso Número</TD>
+        </TR>
+        <TR>
+          <TD colspan=3 class=BoletoValorEsquerdo>DataDoDoc</TD>
+          <TD colspan=4 class=BoletoValorEsquerdo>NumeroDodoc</TD>
+          <TD class=BoletoValorEsquerdo>RC</TD>
+          <TD class=BoletoValorEsquerdo>N</TD>
+          <TD class=BoletoValorEsquerdo>DataDoProces</TD>
+          <TD class=BoletoValorDireito>NossoNumero</TD>
+        </TR>  
+        <TR>
+          <TD colspan=3 class=BoletoTituloEsquerdo>Uso do Banco</TD>
+          <TD colspan=2 class=BoletoTituloEsquerdo>Carteira</TD>
+          <TD colspan=2 class=BoletoTituloEsquerdo>Moeda</TD>
+          <TD colspan=2 class=BoletoTituloEsquerdo>Quantidade</TD>
+          <TD class=BoletoTituloEsquerdo>(x) Valor</TD>
+          <TD class=BoletoTituloDireito>(=) Valor do Documento</TD>
+        </TR>
+        <TR>
+          <TD colspan=3 class=BoletoValorEsquerdo>&nbsp;</TD>
+          <TD colspan=2 class=BoletoValorEsquerdo>SR</TD>
+          <TD colspan=2 class=BoletoValorEsquerdo>R$</TD>
+          <TD colspan=2 class=BoletoValorEsquerdo>&nbsp;</TD>
+          <TD class=BoletoValorEsquerdo>&nbsp;</TD>
+          <TD class=BoletoValorDireito>ValorDocumento</TD>
+        </TR>  
+        <TR>
+          <TD colspan=10 class=BoletoTituloEsquerdo>Instruco</TD>
+          <TD class=BoletoTituloDireito>(-) Desconto</TD>
+        </TR>
+        <TR>
+          <TD colspan=10 rowspan=9 class=BoletoValorEsquerdo style='text-align: left; vertical-align:top; padding-left : 0.1cm'>Instrucoes</TD>
+          <TD class=BoletoValorDireito>&nbsp;</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoTituloDireito>(-) Outras Deduções/Abatimento</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoValorDireito>&nbsp;</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoTituloDireito>(+) Mora/Multa/Juros</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoValorDireito>&nbsp;</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoTituloDireito>(+) Outros Acréscimos</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoValorDireito>&nbsp;</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoTituloDireito>(=) Valor Cobrado</TD>
+        </TR>  
+        <TR>
+          <TD class=BoletoValorDireito>&nbsp;</TD>
+        </TR>                
+         
+        
+       
+                  
+        </TABLE>
+
   </div>
 </ng-template>
