--- a/src/app/negocie-online/negocie-online.component.css
+++ b/src/app/negocie-online/negocie-online.component.css
@@ -40,6 +40,9 @@ table {
 
 .metodo-pagamento {
     margin-top: 25px;
+    border: 1px solid #007bff;
+    padding-bottom: 10px;
+    margin-left: 7px;
 }
 
 .movelLabel {
@@ -80,6 +83,8 @@ table {
 
     .metodo-pagamento {
         margin-top: 0px;
+        margin-bottom: 7px;
+        margin-left: 0;
     }
     
     .metodo-de-pagamento {
