--- a/src/app/acordos-andamento/acordos-andamento.component.html
+++ b/src/app/acordos-andamento/acordos-andamento.component.html
@@ -5,7 +5,7 @@
          <div class="row">
           <div class="col-12 col-sm-2 img-produto">
              <img [src]="getIcon(acordo)" class="produto-img">  
-             <p>{{ acordo.NumeroTitulo.split(' ')[1] }}</p>
+             <p class="titulo-mobile">{{ acordo.NumeroTitulo.split(' ')[1] }}</p>
           </div>  
             <div class="col-sm-3 col-4 btn-linha no-padd-left no-padd-right">  
                 Data: {{ acordo.DataAcordo }}
