--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
@@ -11,8 +11,8 @@
             <p *ngIf="cnpj_inv">CNPJ inválido.</p>
             <p *ngIf="input_inv">Por favor, informe um CPF ou CNPJ.</p>
             <p *ngIf="verificando">Aguarde, estamos verificando. . .</p>
-            <p *ngIf="cpf_sem_debitos">O CPF informado não tem débitos.</p>
-            <p *ngIf="cnpj_sem_debitos">O CNPJ informado não tem débitos.</p>
+            <p *ngIf="cpf_sem_debitos">O CPF informado não tem débitos ou acordos.</p>
+            <p *ngIf="cnpj_sem_debitos">O CNPJ informado não tem débitos ou acordos.</p>
         </div>        
     </div> 
  </div>
