--- a/src/app/acordos-andamento/acordos-andamento.component.css
+++ b/src/app/acordos-andamento/acordos-andamento.component.css
@@ -78,4 +78,9 @@ button {
             width: 30px;
             height: 30px;
         }
+
+        .titulo-mobile {
+            font-weight: bold;
+            font-size: large;
+        }
     }    
