--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -16,6 +16,114 @@
     </button>  
           
     <div class="row opcoes-parcelamento" *ngIf="opcoesParcelamento">
+        <div class="col-md-6" *ngFor="let opc of opcoesPg[this.apiRestService.dividasClaroMovel.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento; let ind = index" [hidden]="!ind">
+          <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarParcelado(ind, apiRestService.dividasClaroMovel.Divida.DadosDivida[ind_parcelado].CodigoTitulo, opcoesPg[apiRestService.dividasClaroMovel.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento[ind].Plano)"> 
+              R$ {{ getOpcao(ind) }}
+          </button>
+        </div>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-primary col-6" (click)="hideOpcoesParcelamento()">
+             Voltar
+          </button>
+        </div>  
+      </div>   
+  
+    <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()" (clickVoltarAVista)="hideOpcoesParcelamento()"></app-prazo-finalizacao>
+    <div class="loader-wrap-wrap" *ngIf="loader">  
+      <div class="loader-wrap">
+        <div class="loader"></div>
+      </div>  
+    </div>
+      
+    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
+      <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of apiRestService.dividasClaroMovel.Divida.DadosDivida; let ind = index">
+        <div class="metodo-de-pagamento">
+          Valor total: R$ {{ div.Parcelas.ParcelaDivida.Valor }} <br>
+          Data Venc.: {{ div.Parcelas.ParcelaDivida.Vencimento }}
+        </div>
+        <div class="row">  
+          <div class="col-6 pr-0"> <!--  col-sm-3 -->
+            <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarAVista(div.CodigoTitulo, getValorNegociar(div.CodigoTitulo), opcoesPg[div.CodigoTitulo].OpcaoPagamento.Plano)"> 
+              À vista:<br> R$ {{ getValorNegociar(div.CodigoTitulo) }} 
+            </button>
+          </div>
+          <div class="col-6">
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[div.CodigoTitulo]"> 
+                Aguarde...
+            </button>            
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[div.CodigoTitulo] === 2"> 
+              Parcelado
+            </button>
+            <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[div.CodigoTitulo] === 1" disabled> 
+              Sem opção de parcelamento
+            </button> 
+          </div>
+        </div>    
+      </div>
+    </div>
+      
+  </accordion-group>
+  <accordion-group *ngIf="apiRestService.dividasClaroInternet.Divida.DadosDivida.length">
+    <button class="btn btn-link btn-accordion" accordion-heading  (click)="getAllOpcoesClaroInternet()">
+      <img src="assets/icons/internet.jpg" class="produto-img" alt="...">
+      <div class="pull-left float-left produto-heading">Claro Internet</div>
+    </button>
+    <div class="row opcoes-parcelamento" *ngIf="opcoesParcelamento">
+      <div class="col-md-6" *ngFor="let opc of opcoesPg[this.dadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento; let ind = index" [hidden]="!ind">
+        <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarParcelado(ind, dadosDivida[ind_parcelado].CodigoTitulo, opcoesPg[dadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento[ind].Plano)"> 
+            R$ {{ getOpcao(ind) }}
+        </button>
+      </div>
+      <div class="col-md-6">
+        <button type="button" class="btn btn-primary col-6" (click)="hideOpcoesParcelamento()">
+           Voltar
+        </button>
+      </div>  
+    </div>   
+
+  <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()" (clickVoltarAVista)="hideOpcoesParcelamento()"></app-prazo-finalizacao>
+  <div class="loader-wrap-wrap" *ngIf="loader">  
+    <div class="loader-wrap">
+      <div class="loader"></div>
+    </div>  
+  </div>
+    
+  <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
+    <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of apiRestService.dividasClaroInternet.Divida.DadosDivida; let ind = index">
+      <div class="metodo-de-pagamento">
+        Valor total: R$ {{ dadosDivida[ind].Parcelas.ParcelaDivida.Valor }} <br>
+        Data Venc.: {{ dadosDivida[ind].Parcelas.ParcelaDivida.Vencimento }}
+      </div>
+      <div class="row">  
+        <div class="col-6 pr-0"> <!--  col-sm-3 -->
+          <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarAVista(dadosDivida[ind].CodigoTitulo, getValorNegociar(dadosDivida[ind].CodigoTitulo), opcoesPg[dadosDivida[ind].CodigoTitulo].OpcaoPagamento.Plano)"> 
+            À vista:<br> R$ {{ getValorNegociar(dadosDivida[ind].CodigoTitulo) }} 
+          </button>
+        </div>
+        <div class="col-6">
+          <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[dadosDivida[ind].CodigoTitulo]"> 
+              Aguarde...
+          </button>            
+          <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 2"> 
+            Parcelado
+          </button>
+          <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 1" disabled> 
+            Sem opção de parcelamento
+          </button> 
+        </div>
+      </div>    
+    </div>
+  </div>
+
+
+  </accordion-group>
+  <accordion-group *ngIf="apiRestService.dividasClaroTv.Divida.DadosDivida.length">
+      <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading (click)="getAllOpcoesClaroTv()">
+        <img src="assets/icons/tv.jpg" class="produto-img" alt="...">
+        <div class="pull-left float-left produto-heading">Claro TV</div>
+      </button>
+
+      <div class="row opcoes-parcelamento" *ngIf="opcoesParcelamento">
         <div class="col-md-6" *ngFor="let opc of opcoesPg[this.dadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento; let ind = index" [hidden]="!ind">
           <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarParcelado(ind, dadosDivida[ind_parcelado].CodigoTitulo, opcoesPg[dadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento[ind].Plano)"> 
               R$ {{ getOpcao(ind) }}
@@ -29,50 +137,45 @@
       </div>   
   
     <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()" (clickVoltarAVista)="hideOpcoesParcelamento()"></app-prazo-finalizacao>
-    <div class="loader-wrap-wrap" *ngIf="loaderClaroMovel">  
+    <div class="loader-wrap-wrap" *ngIf="loader">  
       <div class="loader-wrap">
         <div class="loader"></div>
       </div>  
     </div>
       
-    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loaderClaroMovel"> 
-      <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of dadosDivida; let ind = index">
+    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
+      <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of apiRestService.dividasClaroTv.Divida.DadosDivida; let ind = index">
         <div class="metodo-de-pagamento">
-          Valor total: R$ {{ dadosDivida[ind].Parcelas.ParcelaDivida.Valor }} <br>
-          Data Venc.: {{ dadosDivida[ind].Parcelas.ParcelaDivida.Vencimento }}
+          Valor total: R$ {{ getValorTotal(div.CodigoTitulo) }} 
+           <div *ngIf="div.Parcelas.ParcelaDivida.length">
+            <div *ngFor="let par of div.Parcelas.ParcelaDivida">
+              Data Venc.: {{ par.Vencimento }}              
+            </div>
+           </div>
+           <div *ngIf="div.Parcelas.ParcelaDivida.Vencimento">
+              Data Venc.: {{ div.Parcelas.ParcelaDivida.Vencimento }}
+           </div>
         </div>
         <div class="row">  
           <div class="col-6 pr-0"> <!--  col-sm-3 -->
-            <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarAVista(dadosDivida[ind].CodigoTitulo, getValorNegociar(dadosDivida[ind].CodigoTitulo), opcoesPg[dadosDivida[ind].CodigoTitulo].OpcaoPagamento.Plano)"> 
-              À vista:<br> R$ {{ getValorNegociar(dadosDivida[ind].CodigoTitulo) }} 
+            <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarAVista(div.CodigoTitulo, getValorNegociar(div.CodigoTitulo), opcoesPg[div.CodigoTitulo].OpcaoPagamento.Plano)"> 
+              À vista:<br> R$ {{ getValorNegociar(div.CodigoTitulo) }} 
             </button>
           </div>
           <div class="col-6">
-            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[dadosDivida[ind].CodigoTitulo]"> 
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[div.CodigoTitulo]"> 
                 Aguarde...
             </button>            
-            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 2"> 
+            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[div.CodigoTitulo] === 2"> 
               Parcelado
             </button>
-            <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[dadosDivida[ind].CodigoTitulo] === 1" disabled> 
+            <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[div.CodigoTitulo] === 1" disabled> 
               Sem opção de parcelamento
             </button> 
           </div>
         </div>    
       </div>
     </div>
-      
-  </accordion-group>
-  <accordion-group *ngIf="apiRestService.dividasClaroInternet.Divida.DadosDivida.length">
-    <button class="btn btn-link btn-accordion" accordion-heading>
-      <img src="assets/icons/internet.jpg" class="produto-img" alt="...">
-      <div class="pull-left float-left produto-heading">Claro Internet</div>
-    </button>
-  </accordion-group>
-  <accordion-group *ngIf="apiRestService.dividasClaroTv.Divida.DadosDivida.length">
-      <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading>
-        <img src="assets/icons/tv.jpg" class="produto-img" alt="...">
-        <div class="pull-left float-left produto-heading">Claro TV</div>
-      </button>
+
     </accordion-group>
 </accordion>
