--- a/src/app/boleto/boleto.component.html
+++ b/src/app/boleto/boleto.component.html
@@ -26,8 +26,6 @@
         <tr><td colspan=11>
         <ul class=BoletoInstrucoes>
         <li>Imprima em papel A4 ou Carta</li>
-        <li>Utilize margens mínimas a direita e a esquerda</li>
-        <li>Recorte na linha pontilhada</li>
         <li>Não rasure o código de barras</li>
         </ul>
         </td></tr>
@@ -42,7 +40,7 @@
           <TD class=BoletoTituloDireito>Vencimento</TD>
         </TR>
         <TR>
-          <TD colspan=10 class=BoletoValorEsquerdo style='text-align: left; padding-left : 0.1cm; text-decoration: capitalize'>{{ cliente }}</TD>
+          <TD colspan=10 class=BoletoValorEsquerdo style='text-align: left; padding-left : 0.1cm; text-transform: capitalize'>{{ cliente }}</TD>
           <TD class=BoletoValorDireito>{{ data }}</TD>
         </TR>  
         <TR>
