--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -59,7 +59,7 @@
                     <img src="assets/icons/fiz-pagamento.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">JÁ FIZ O PAGAMENTO</h5>
-                    <p class="card-text">Já realizou o pagamento de seus débitos com a claro? pressione o botão abaixo!</p>
+                    <p class="card-text">Já realizou o pagamento de seus débitos com a claro? Pressione o botão abaixo!</p>
                         
                     </div>
                     <p class="btn btn-acessar">Informar</p>
