--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -1,7 +1,17 @@
-<div class="loader-wrap" *ngIf="loader">
-  <p>Aguarde . . .</p>
-  <div class="loader"></div>
+<div *ngIf="sucessoSms">
+  <h1>SMS enviado com sucesso!</h1>
 </div>
+
+<div *ngIf="pegarTel">
+  <app-input-tel (clickEnviar)="enviarSms()"></app-input-tel>
+</div>
+
+<div *ngIf="loader">
+  <p>Aguarde . . .</p>
+  <div class="loader-wrap">  
+    <div class="loader"></div>
+  </div>
+</div>  
 
 <div *ngIf="sucesso">
   <h1> O Acordo foi realizado com sucesso!</h1>
@@ -15,7 +25,7 @@
         </button>
       </div>
       <div class="col-6 col-sm-4">
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" (click)="enviarSms()">
           Por SMS
         </button>
       </div>
@@ -25,11 +35,12 @@
         </button>
       </div>            
     </div>
-    <div class="loader-wrap" *ngIf="loadingBoleto">
-        <p>Aguarde . . .</p>
+    <div *ngIf="loadingBoleto">
+        <p>Aguarde . . .</p> 
+      <div class="loader-wrap">        
         <div class="loader"></div>
-    </div>
-      
+      </div>
+    </div>  
     <div class="erro-boleto" *ngIf="erroBoleto">Houve um erro. Tente novamente, por favor.</div>
 </div>
 
@@ -45,8 +56,8 @@
   <p *ngIf="vezesParcelado()">Demais parcelas: {{ vezesParcelado() }} x R$ {{ outrasParcelado() }}</p>
   <div class="row">
     <div class="col-sm-4">
-      <button type="button" class="btn btn-yellow" (click)="gravaAcordo()">
-        Confirmar acordo
+      <button type="button" class="btn btn-yellow" (click)="sucesso = true"> <!-- gravaAcordo() -->
+        Confirmarr acordo
       </button>
     </div>
     <div class="col-6 col-sm-4">
