--- a/src/app/input-tel/input-tel.component.html
+++ b/src/app/input-tel/input-tel.component.html
@@ -1,4 +1,4 @@
-<div class="form-group"> 
+<div class="form-group tel-box">         
         <input type="text" [textMask]="{mask: telMask}" class="form-control col-sm-8" aria-describedby="emailHelp" placeholder="(DDD) TELEFONE" [(ngModel)]="tel" (input)="cleanAlerts()"> 
         <button type="submit" class="col-sm-3" (click)="envia()">Enviar</button>
         <div class="input_error">
