--- a/src/app/negocie-online/negocie-online.component.css
+++ b/src/app/negocie-online/negocie-online.component.css
@@ -1,5 +1,3 @@
-
-
 .produto-heading {
 line-height: 44px;
 font-size: 22px;
@@ -111,6 +109,6 @@ table {
 }
 
 .loader-wrap-wrap {
-    /*height: 1500px;*/
+    height: 380px;
 }
 
