--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -6,7 +6,7 @@
 
 <accordion [isAnimated]="true" [closeOthers]="true">
   
-  <accordion-group *ngIf="apiRestService.dividasClaroMovel.Divida.DadosDivida.length && fecharAbas[0]">
+  <accordion-group *ngIf="apiRestService.dividasClaroMovel.Divida.DadosDivida.length && fecharAbas[0]" class="overflow-auto">
     <button class="btn btn-link btn-block clearfix btn-accordion" accordion-heading (click)="getAllOpcoesClaroMovel()">
       <img src="assets/icons/phone.jpg" class="produto-img" alt="...">
       <div class="pull-left float-left produto-heading"><span>Claro Móvel</span> 
@@ -29,9 +29,13 @@
       </div>   
   
     <app-prazo-finalizacao *ngIf="prazoFinalizacao" (clickVoltar)="showOpcoesParcelamento()" (clickVoltarAVista)="hideOpcoesParcelamento()"></app-prazo-finalizacao>
-    
+    <div class="loader-wrap-wrap" *ngIf="loader">  
+        <div class="loader-wrap">
+          <div class="loader"></div>
+        </div>  
+      </div>
       
-    <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
+    <div class="row overflow-auto" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
       <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of apiRestService.dividasClaroMovel.Divida.DadosDivida; let ind = index">
         <div class="metodo-de-pagamento">
           <span class="font-weight-bold">Valor total: R$ {{ div.Parcelas.ParcelaDivida.Valor }} </span><br>
@@ -44,13 +48,13 @@
             </button>
           </div>
           <div class="col-6">
-            <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind)" *ngIf="!parcelado[div.CodigoTitulo]"> 
+            <button type="button" class="btn btn-primary" *ngIf="!parcelado[div.CodigoTitulo]"> 
                 Aguarde...
             </button>            
             <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento(ind, 0)" *ngIf="parcelado[div.CodigoTitulo] === 2"> 
               Parcelado
             </button>
-            <button type="button" class="btn btn-primary font-15px" (click)="showOpcoesParcelamento(ind)" *ngIf="parcelado[div.CodigoTitulo] === 1" disabled> 
+            <button type="button" class="btn btn-primary font-15px" *ngIf="parcelado[div.CodigoTitulo] === 1" disabled> 
               Sem opção de parcelamento
             </button> 
           </div>
@@ -84,7 +88,7 @@
     </div>  
   </div>
     
-  <div class="row" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
+  <div class="row overflow-auto" [hidden]="opcoesParcelamento || prazoFinalizacao || loader"> 
     <div class="metodo-pagamento col-xl-4 col-lg-6" *ngFor="let div of apiRestService.dividasClaroInternet.Divida.DadosDivida; let ind = index">
       <div class="metodo-de-pagamento">
        <span class="font-weight-bold"> Valor total: R$ {{ dadosDivida[ind].Parcelas.ParcelaDivida.Valor }} </span><br>
@@ -119,7 +123,7 @@
         <div class="pull-left float-left produto-heading">Claro TV</div>
       </button>
 
-      <div class="row opcoes-parcelamento" *ngIf="opcoesParcelamento && apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado] && opcoesPg[apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo] && opcoesPg[this.apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento">
+      <div class="row opcoes-parcelamento overflow-auto" *ngIf="opcoesParcelamento && apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado] && opcoesPg[apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo] && opcoesPg[this.apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento">
         <div class="col-md-6" *ngFor="let opc of opcoesPg[this.apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento; let ind = index" [hidden]="!ind">
           <button type="button" class="btn btn-primary" (click)="showPrazoFinalizacao(); pagarParceladoTv(ind, apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo, opcoesPg[this.apiRestService.dividasClaroTv.Divida.DadosDivida[ind_parcelado].CodigoTitulo].OpcaoPagamento[ind].Plano)"> 
               R$ {{ getOpcaoTv(ind) }}
@@ -175,8 +179,9 @@
 
     </accordion-group>
 </accordion>
+<!--
 <div class="loader-wrap-wrap" *ngIf="loader">  
     <div class="loader-wrap">
       <div class="loader"></div>
     </div>  
-  </div>
+  </div>-->
